<resources>
    <string name="app_name">WeatherApp</string>

    <!-- search activity -->
    <string name="title_activity_search">Search city</string>
    <string name="search_hint_city">City</string>
    <string name="search_hint_country">Country</string>
    <string name="search_error_message_city">Enter city name</string>

    <!-- forecast activity -->
    <string name="title_activity_forecast">Forecast</string>
    <string name="forecast_weather_icon_description">Weather icon</string>
    <string name="weather_box_sub_1_temp">Temperature</string>
    <string name="weather_box_sub_1_temp_max">max</string>
    <string name="weather_box_sub_1_temp_min">min</string>
    <string name="weather_box_sub_1_temp_cur">current</string>
    <string name="weather_box_sub_1_wind">Wind</string>
    <string name="weather_box_sub_1_wind_speed">speed</string>
    <string name="weather_box_sub_1_wind_degrees">degrees</string>
    <string name="weather_box_sub_2_pressure">Pressure</string>
    <string name="weather_box_sub_2_humidity">Humidity</string>
    <string name="forecast_interactor_error">Error occurred while getting forecasts</string>
    <string name="current_weather_interactor_error">Error occurred while getting current weather</string>

    <!-- youtube video activity -->
    <string name="title_activity_youtube_video">Youtube video</string>
    <string name="forecast_loading">Loading…</string>
    <string name="youtube_video_player_error">Error: %s</string>
    <string name="youtube_video_interactor_error">Error occurred while getting youtube video</string>
    <string name="youtube_video_presenter_no_videos_error">No videos found</string>
</resources>
