<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/weather_box_tv_temperature_label"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/weather_box_sub_1_temp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weather_box_tv_temperature_max_label"
                style="@style/TextBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_box_sub_1_temp_max"/>

            <TextView
                android:id="@+id/weather_box_tv_temperature_min_label"
                style="@style/TextBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_box_sub_1_temp_min"/>

            <TextView
                android:id="@+id/weather_box_tv_temperature_current_label"
                style="@style/TextBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_box_sub_1_temp_cur"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weather_box_tv_temperature_max_value"
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="27°C"/>

            <TextView
                android:id="@+id/weather_box_tv_temperature_min_value"
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="16°C"/>

            <TextView
                android:id="@+id/weather_box_tv_temperature_current_value"
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="21°C"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/weather_tv_wind_label"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/weather_box_sub_1_wind"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weather_box_tv_wind_speed_label"
                style="@style/TextBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_box_sub_1_wind_speed"/>

            <TextView
                android:id="@+id/weather_box_tv_wind_degrees_label"
                style="@style/TextBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_box_sub_1_wind_degrees"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weather_box_tv_wind_speed_value"
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2.56km/h"/>

            <TextView
                android:id="@+id/weather_box_tv_wind_degrees_value"
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="25.5002°"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
